--- a/package.json
+++ b/package.json
@@ -40,5 +40,10 @@
     "node-sass": "^4.13.1",
     "socket.io": "^2.2.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "highlight.js": "^9.18.1",
+    "reveal-code-focus": "^1.1.0",
+    "reveal.js-toolbar": "^0.2.1"
+  }
 }
