--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   "license": "MIT",
   "dependencies": {
     "highlight.js": "^9.18.1",
-    "reveal-code-focus": "^1.1.0",
-    "reveal.js-toolbar": "^0.2.1"
+    "livereload": "^0.9.1",
+    "reveal-code-focus": "^1.1.0"
   }
 }
